@@ -41,6 +41,11 @@ HOW TO UPDATE?
 
 Breaking Changes:
 
+ - Keys: commented out legacy names which were obsoleted in 1.89.0 (August 2022).
+   - ImGuiKey_ModCtrl  --> ImGuiMod_Ctrl
+   - ImGuiKey_ModShift --> ImGuiMod_Shift
+   - ImGuiKey_ModAlt   --> ImGuiMod_Alt
+   - ImGuiKey_ModSuper --> ImGuiMod_Super
  - BeginChild: commented out legacy names which were obsoleted in 1.90.0 (Nov 2023),
    1.90.9 (July 2024), 1.91.1 (August 2024). (#462, #7687)
    - ImGuiChildFlags_Border                  --> ImGuiChildFlags_Borders
